# java-2-times-faster-than-c

./: .gitignore  README.md  build-c.sh  build-clang.sh  build-csharp.sh  build-gcc.sh  build-go.sh  build-kotlin-native.sh  build-rs.sh  build-rust.sh  build.gradle.kts
src/main/c/: almost_pseudo_random.c  java_2_times_faster_than_c.c  java_2_times_faster_than_c_xorshift.c  xorshift_rng.c
src/main/csharp/: Program.cs
src/main/csharp/java-faster-csharp/: Program.cs  java-faster-csharp.csproj
src/main/csharp/xorshift_rng/: Program.cs  XorShift64SRng.cs  xorshift_rng.csproj
src/main/go/: almost_pseudo_random.go  java_faster_than_go.go  java_faster_than_go_xorshift.go  util.go  xorshift_rng.go
src/main/html/: almost-pseudo-random.html  java-faster-than-javascript.html  xorshift_rng.html
src/main/java/com/xemantic/test/howfast/: AlmostPseudoRandom.java  Java2TimesFasterThanC.java  Java2TimesFasterThanCXORShift.java  XORShift.java
src/main/javascript/: almost_pseudo_random.js  java_faster_than_javascript.js  java_faster_than_node.js  run_test.js  xorshift_rng.js
src/main/kotlin/: AlmostPseudoRandom.kt  KotlinAsFastAsJava.kt  XorShift.kt
src/main/node/: almost_pseudo_random.js  java_faster_than_node.js
src/main/rust/: Cargo.toml  almost_pseudo_random.rs  rng.rs  rust_faster_than_java.rs  rust_raw.rs  rust_raw_pointers_faster_than_java.rs  rust_raw_xorshift.rs  rust_safer.rs  rust_safer_xorshift.rs  xorshift_rng.rs
